feat: add findByZoneId to SecurityObjectRepository